# PGW

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  load_test.sh  run_client.sh  run_server.sh  test_client.sh
client/: CMakeLists.txt
client/include/: Config.hpp  Logger.hpp  UdpClient.hpp
client/src/: Config.cpp  Logger.cpp  UdpClient.cpp  main.cpp
config/: client_config.json  server_config.json
server/: CMakeLists.txt
server/include/: CDRLogger.hpp  Config.hpp  HttpApi.hpp  Logger.hpp  SessionManager.hpp  UdpServer.hpp
server/src/: CDRLogger.cpp  Config.cpp  HttpApi.cpp  Logger.cpp  SessionManager.cpp  UdpServer.cpp  main.cpp
tests/: CMakeLists.txt  test_Config.cpp  test_HttpApi.cpp  test_SessionManager.cpp  test_UdpServer.cpp
